--- a/html-css/arison.css
+++ b/html-css/arison.css
@@ -1,5 +1,11 @@
+
+        
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&display=swap');
+
+/*header*/
 *{
+    font-size:100%;
     margin: 0;
     text-decoration: none;
     padding: 0;
@@ -9,57 +15,102 @@
 
 body{
     font-size: 100%;
-    background:#FFE902;
-    
+    height: 900px;
 }
 
-#cabeçalho{
+header{
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    padding-bottom: 20px; 
-    background: #8E24AA;
-    padding-top: 16px;
+    justify-content:center ;
+}
+#cabeçalho{
+background: rgb(236, 231, 231);
+ display: flex;
+ flex-direction: row;
+  height: 82px;
+ padding-top: 0px
 }
 
 #nav{
-    display: flex;
-    gap: 32px;
-}
-   
-
-
-.a{
-    font-family: 'Fredoka One', cursive;
-    font-weight: 400;
-    font-size: 24px;
-    color: rgb(255, 255, 255);
-    display: flex;
+    display: flex;  
+    padding-top: 10px;
+    padding-right: 200px;
+    gap: 110px;
 }
 
+#logo{
+    height: 80px;
+    padding-right: 400px;
+}
+
+#a-header{
+    border-bottom:3.6px solid black;
+    font-size: 46px;
+    font-family: 'Bebas Neue', cursive;
+    color: black;
+}/*header acima*/
+
+
+
+
+/*main abaixo*/
 #conteudo{
-    display: flex;
+     display:flex;
+    justify-content: center;
 }
 
-.sorvete{ 
-    width:140px;
-    height: 199px;  
-}  
 
-#div{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+#container{
+    padding-top: 80px;
 }
 
-#h1{
+
+
+#div-1{
+    background: #F7971E;  /* fallback for old browsers */ background: -webkit-linear-gradient(to right, #FFD200, #F7971E);  /* Chrome 10-25, Safari 5.1-6 */ background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    display: block;
+    justify-items: column;
+    height:600px ;
+    width: 300px;
+}
+
+#p-milkshake{
     display: flex;
+    justify-content: center;
+    height: 120px;
+    width: 200px;
+}
+
+#p-div-1{ 
+   padding-inline-start: 93px;
+    font-size:67px;
     color: white;
-    font-family: 'Fredoka One', cursive;
-    font-weight: 400;
-    font-size: 24px;
-    color: rgb(255, 255, 255);
-    padding: 90px;
+    font-family: 'Bebas Neue', cursive;
 }
+ 
+#p-div-2{
+    font-size: 67px;
+    font-family: 'Bebas Neue', cursive;
+    color: #BF360C;
+}
+
+#img-milkshake{
+    height: 180px;
+    width: 120px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
