--- a/html-css/arison.css
+++ b/html-css/arison.css
@@ -1,114 +1,70 @@
 
-        
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Fredoka+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&display=swap');
 
 /*header*/
 *{
     font-size:100%;
-    margin: 0;
-    text-decoration: none;
-    padding: 0;
-    border: none;
-    box-sizing: border-box;
+    margin: 0px;
 }
 
 body{
+   background: white url(https://i.pinimg.com/564x/4f/83/c5/4f83c577980e622c6245056c5647a1f0.jpg);
     font-size: 100%;
-    height: 900px;
 }
+
+
 
 header{
+    gap: 300px;
+    justify-content: center;
     display: flex;
-    justify-content:center ;
-}
-#cabeçalho{
-background: rgb(236, 231, 231);
- display: flex;
- flex-direction: row;
-  height: 82px;
- padding-top: 0px
+    flex-direction: row;
+    background: lightgrey;
+    height: 118px;
 }
 
-#nav{
-    display: flex;  
-    padding-top: 10px;
-    padding-right: 200px;
-    gap: 110px;
+h2{
+    font-family: 'Fredoka', cursive;
+    font-weight: 500; 
 }
+
 
 #logo{
-    height: 80px;
-    padding-right: 400px;
+height: 115px;
 }
 
 #a-header{
-    border-bottom:3.6px solid black;
+    padding-top: 30px;
     font-size: 46px;
     font-family: 'Bebas Neue', cursive;
     color: black;
 }/*header acima*/
 
-
+                   
+#div-h1-main{
+  display: flex;
+  justify-content: center;
+  height: 150px;
+}
 
 
 /*main abaixo*/
-#conteudo{
-     display:flex;
-    justify-content: center;
-}
-
-
-#container{
-    padding-top: 80px;
-}
-
-
-
-#div-1{
-    background: #F7971E;  /* fallback for old browsers */ background: -webkit-linear-gradient(to right, #FFD200, #F7971E);  /* Chrome 10-25, Safari 5.1-6 */ background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    display: block;
-    justify-items: column;
-    height:600px ;
-    width: 300px;
-}
-
-#p-milkshake{
+#main{   
     display: flex;
     justify-content: center;
-    height: 120px;
-    width: 200px;
+    height: 900px;
 }
 
-#p-div-1{ 
-   padding-inline-start: 93px;
-    font-size:67px;
-    color: white;
+
+
+h1{
+    font-size: 60px;
     font-family: 'Bebas Neue', cursive;
-}
- 
-#p-div-2{
-    font-size: 67px;
-    font-family: 'Bebas Neue', cursive;
-    color: #BF360C;
-}
-
-#img-milkshake{
-    height: 180px;
-    width: 120px;
+    text-align: center;
+    padding-top:50px;
 
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 
