--- a/arison.css
+++ b/arison.css
@@ -2,71 +2,93 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Fredoka+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&display=swap');
 
-/*header*/
 *{
-    font-size:100%;
-    margin: 0px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins' sans-serif;      
 }
 
-body{
-   background: white url(https://i.pinimg.com/564x/4f/83/c5/4f83c577980e622c6245056c5647a1f0.jpg);
-    font-size: 100%;
-}
+.hero{
+    min-height: 100vh;
+    width: 100%;
+    background-color: #000;
+    background-image: url(https://i.pinimg.com/originals/79/a3/84/79a384c3c449ad01b0e57e790807b2c0.gif);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 70;
+    color: #fff;
+    padding: 0 8%;
+} 
 
-
-
-header{
-    gap: 300px;
-    justify-content: center;
+nav{
     display: flex;
-    flex-direction: row;
-    background: lightgrey;
-    height: 118px;
-}
-
-h2{
-    font-family: 'Fredoka', cursive;
-    font-weight: 500; 
-}
-
-
-#logo{
-height: 115px;
-}
-
-#a-header{
-    padding-top: 30px;
-    font-size: 46px;
-    font-family: 'Bebas Neue', cursive;
-    color: black;
-}/*header acima*/
-
-                   
-#div-h1-main{
-  display: flex;
-  justify-content: center;
-  height: 150px;
-}
-
-
-/*main abaixo*/
-#main{   
-    display: flex;
-    justify-content: center;
-    height: 900px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 0;
 }
 
 
 
-h1{
-    font-size: 60px;
-    font-family: 'Bebas Neue', cursive;
-    text-align: center;
-    padding-top:50px;
-
+.logo{      
+    width: 190px;
 }
 
 
+nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 10px 30px; 
+}
 
+nav ul li a{
+    font-size: 26px;
+    color: #fff;
+    text-decoration: none;
+}
 
+.hero h1{
+    font-size: 70px;
+    margin-top: 12%;
+}
 
+.hero button{
+    background: #393939;
+    border: 0;
+    outline: none;
+    padding: 15px 35px;
+    color: #fff;
+    margin-top: 25px;
+    font-weight:500;
+    font-size: 20px;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+
+.indicator span{
+    display: inline-block;
+    background: #3a3a3a;
+    height: 25px;         
+    width: 25px;
+    border-radius: 50%;
+    margin-right: 10px;
+}                    
+
+.indicator{
+    margin-top: 150px; 
+}
+
+.indicator span.active{
+    background: #bfbfbf;
+}                         
+
+.cta {
+    position: absolute;
+    width: 25%;
+    min-width: 250px;
+    right: 8%;
+    bottom: 100px;
+}
+#ctap{                                                
+    font-size:  24px;
+}
