--- a/outros/ex01.css
+++ b/outros/ex01.css
@@ -1,98 +1,44 @@
-*{
-    list-style: none;
-    text-decoration: none;
-    margin: 0;
-    box-sizing: border-box;
-    padding: 0;
-}
-body{
-    background-color: lightgray;
-}
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Righteous&display=swap');
 
-header{
-height: 150px;
-border: 10px solid lightgray;
-background-color: white;
-border-radius: 40px 40px;
+*{
+ list-style: none;
+ text-decoration: none;
+ margin: 0;
+ box-sizing: border-box;
+ padding: 0px;
 }
 
 h1{
-    padding-left: 20px;
-    padding-top: 20px;
-    font-family: sans-serif;
+  color:yellow;
+  font-family: 'righteous';
+  text-align: center;
 }
 
-nav {
-    border-radius: 20px 20px;
-background-color: rgb(131, 129, 129);
-gap: 20px;
-margin: 8px;
-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.842);
+body{
+  background-color: lightgray;
 }
-
-nav>a{
-    color: white;
-    font-family: sans-serif;
-    font-size: 20px;
-
-}
-
 
 main{
-    background: white;
-    border-radius: 40px;
-    border: 4px solid lightgrey;
-    box-shadow: 2px 2px 2px;
-}
-
-#lorem{
-    background-color: lightgrey;
-}
-
-p{
-    padding-top: 10px;
-    color: rgb(90, 89, 89);
+  justify-content: center;
+  display: inline-block;
 }
 
 h2{
-    font-family: sans-serif;
+  text-align:center;
 }
 
-
-#p1{
-    color: black;
-    font-family: sans-serif;
+#centro{
+  width: 500px;
+  height:500px;
+  background-color: white;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
 }
 
-#fim{
-    background-color: rgb(80, 79, 79);
-    color: black;
-    font-family: sans-serif;
+#circulo{
+  height: 300px;
+  background-color: black; 
+  width: 300px;
+  border-radius: 50%;
 }
-
-
-footer{
-    background-color: black;
-    height: 40px;
-    padding-top: 5px;
-    margin-top: 20px;
-}
-
-
-section{
-    margin: 10px;
-}
-
-#a{
-  color: white;
-    text-align: center;
-}
-
-#bola{
-    width: 100px;
-    height: 100px;
-    margin: 10px;
-    border-radius:50% ;
-    background-color: white;
-}
-
